fixed hero alignment

--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ body {
   display: inline-block;
   cursor: pointer;
   margin-right: 2rem;
-  margin-bottom: 2rem;
+
   /* border-bottom: 1px dotted black; If you want dots under the hoverable text */
 }
 
@@ -322,5 +322,9 @@ body {
 
   .cardtext {
     width: 260px;
+  }
+
+  .tooltip {
+    margin-bottom: 2rem;
   }
 }
